# rage-bait-tweeter

./: .gitignore  DESIGN.md  FEED_VOLUME_ANALYSIS.md  README.md  RSS_FEEDS.md  config.yaml  pyproject.toml
src/rage_bait_tweeter/: __init__.py  __main__.py  aggregator.py  clustering.py  config.py  gate.py  generator.py  models.py  notifier.py  pipeline.py  scorer.py  twitter.py  types.py
tests/: test_aggregator.py  test_clustering.py  test_config.py  test_gate.py  test_generator.py  test_models.py  test_pipeline.py  test_scorer.py
